feat: add auth for endpoints
