# internal/transport/http/configure.go
@@ -2,6 +2,8 @@ package http
 
 import (
 	"log/slog"
+	nethttp "net/http"
+	"strings"
 	"time"
 
 	"github.com/labstack/echo/v4"
@@ -9,6 +11,7 @@ import (
 	"golang.org/x/time/rate"
 
 	"github.com/muhlba91/hochschule-burgenland-bswe-director/internal/app/configuration"
+	"github.com/muhlba91/hochschule-burgenland-bswe-director/internal/transport/auth"
 	"github.com/muhlba91/hochschule-burgenland-bswe-director/internal/transport/callback"
 	"github.com/muhlba91/hochschule-burgenland-bswe-director/internal/transport/websocket"
 )
@@ -17,8 +20,10 @@ import (
 // http: The echo server to configure.
 func configureRoutes(
 	http *Server,
+	configuration *configuration.Data,
 ) {
-	http.Server.GET("/ws", websocket.Handler(http.Dispatcher))
+	http.Server.POST("/token", auth.Handler(configuration))
+	http.Server.GET("/ws", websocket.Handler(http.Dispatcher), authMiddleware(configuration))
 	http.Server.POST("/callback/:requestId", callback.Handler(http.Dispatcher))
 }
 
@@ -55,4 +60,36 @@ func configureServer(http *Server, configuration *configuration.Data) {
 			return nil
 		},
 	}))
+}
+
+// authMiddleware is a middleware function that checks for a valid JWT in the request.
+// cfg: The configuration data containing the auth secret and auth enabled flag.
+func authMiddleware(cfg *configuration.Data) echo.MiddlewareFunc {
+	return func(next echo.HandlerFunc) echo.HandlerFunc {
+		return func(c echo.Context) error {
+			if !cfg.AuthEnabled {
+				return next(c)
+			}
+
+			token := c.Request().Header.Get("Authorization")
+			if token == "" {
+				token = c.QueryParam("token")
+			} else {
+				token = strings.TrimPrefix(token, "Bearer ")
+			}
+
+			if token == "" {
+				return echo.NewHTTPError(nethttp.StatusUnauthorized, auth.ErrMissingToken.Error())
+			}
+
+			claims, err := auth.ValidateJWT(token, cfg.AuthSecret)
+			if err != nil {
+				return echo.NewHTTPError(nethttp.StatusUnauthorized, auth.ErrInvalidToken.Error())
+			}
+
+			c.Set("clientID", claims.ClientID)
+
+			return next(c)
+		}
+	}
 }
